--- a/app/templates/table.html
+++ b/app/templates/table.html
@@ -7,7 +7,7 @@
 
     {% block navbar %}
     <div class="navbar navbar-fixed-top">
-        <h1>Valores de imóvel - {{local["locationId"]}}</h1>
+        <h1>Valores de imóvel - {{locationId}}</h1>
     </div>
     {% endblock %}
 
