--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,8 +14,7 @@
     {% block content %}
     <body>
 
-        <form action="" method="POST" style="text-align: center;">
-            <br>
+        <form action="" method="POST" style="text-align: center;">            
             <div class="form-group">
                 <label>Local:  </label>
 
@@ -24,24 +23,38 @@
             </div>
             <br>
             
+            {% for local in locations %}
+
+                {{ form["checkbox" + loop.index0|string] }}
+                {{ local["locationId"] }}
+                <br>
+
+            {% endfor %}
+
+            <br>
+
             <div class="form-group">
                 <label>Query: </label>
                 
                 {{ form.query }}
             </div>
 
-            <br>
 
-            {% for local in locations %}
-
-                {{ form["checkbox" + loop.index0|string] }}
-                {{ local["address"]["locationId"] }}
-                <br>
-
-            {% endfor %}
-
-            <br>
+            <h4> Principais features a serem filtradas: </h4>
             
+            <ul style="width: 250px; margin: 0 auto; text-align: left;">
+                <li> bedrooms: Quantidade de quartos </li>
+                <li> bathrooms: Quantidade de banheiros </li>
+                <li> price: Preço </li>
+                <li> condo_fee: Preço do condominio </li>
+                <li> total_fee: Preço total </li>
+                <li> distance: Distância até o metrô </li>
+            </ul>
+            
+            exemplo de query: bedrooms>=2 and total_fee <= 2500
+            <br>
+            <br>
+
             {{ form.submit_table }}
             {{ form.submit_map }}
         </form>
