--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,7 +14,15 @@
     {% block content %}
     <body>
 
-        <form action="" method="POST" style="text-align: center;">            
+        <form action="" method="POST" style="text-align: center;">
+            
+            {{ form.tp_contrato }}
+            {{ form.tp_listings }}
+
+            <br>
+            <br>
+
+            
             <div class="form-group">
                 <label>Local:  </label>
 
