add layout dashboard

--- a/listings/templates/home.html
+++ b/listings/templates/home.html
@@ -65,6 +65,10 @@
 
     <div class="py-5 col-6 mx-auto">
         <div class="btn-group">
+            <button type="submit" class='btn btn-primary' name="submit-dash">
+                Dashboard
+            </button>
+
             <button type="submit" class='btn btn-primary' name="submit-table">
                 Tabela
             </button>
